--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,10 +1,11 @@
 body {
-    /*font-family: 'Courier New', Courier, monospace;*/
-    font-family: sans-serif;
+    font-family: 'Courier New', Courier, monospace;
+    /*font-family: sans-serif;*/
+    background-color: orangered;
 }
 
 nav {
-    background-color: #333;
+    background-color: #000;
 }
   
 nav ul {
@@ -20,17 +21,23 @@ nav ul li {
   
 nav ul li a {
     display: block;
-    color: #fff;
+    color: orangered;
     text-decoration: none;
     padding: 10px 20px;
 }
   
 .menu-icon {
     display: none;
-    color: #fff;
+    color: orangered;
     font-size: 20px;
     cursor: pointer;
     padding: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
   
 /* Media query for mobile view */
