--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,10 +10,6 @@
 <body>
     <%- include('navbar') %>
     <h1><%= title %></h1>
-    <p>Welcome to the <%= title %> please enjoy the content.</p>
-    <pre><%= JSON.stringify(user, null, 2)%></pre>
-    <footer>
-        <p><%= title %> - <%= year %></p>
-    </footer>
+    <p><%= text %></p>
 </body>
 </html>
